@@ -1,3 +1,7 @@
+2007-01-18  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amcheck.c: Check tape_access.
+	* server-src/taper.c: Improve message.
+
 2007-01-16  Jean-Louis Martineau <martineau@zmanda.com>
 	* configure.in: Define GCC_COMPILER.
 	* gnulib/Makefile.am: Add -Wno-error to AM_CFLAGS if GCC_COMPILER.
